--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gpx_map",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js",
-    "test": "mocha test/**/*.test.js",
-    "test:watch": "nodemon --watch '**/*.js' --exec 'npm test'"
+    "start": "rm -rf output && tsx src/main.js",
+    "test": "node --import tsx --test test/**/*.test.js",
+    "mocha-test": "mocha test/**/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +16,18 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.10",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.17.47",
+    "@types/xml2js": "^0.4.14",
     "chai": "^5.2.0",
+    "jest": "^29.7.0",
     "mocha": "^11.3.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.3.4",
+    "tsx": "^4.19.4",
+    "typescript": "^5.3.3"
   }
 }
