--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "start": "rm -rf output && tsx src/main.js",
-    "test": "node --import tsx --test test/**/*.test.js",
-    "mocha-test": "mocha test/**/*.test.js"
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -16,18 +18,13 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.10",
     "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/mocha": "^10.0.6",
     "@types/node": "^20.17.47",
     "@types/xml2js": "^0.4.14",
-    "chai": "^5.2.0",
-    "jest": "^29.7.0",
-    "mocha": "^11.3.0",
+    "@vitest/coverage-v8": "^1.6.0",
     "nodemon": "^3.0.1",
-    "ts-jest": "^29.3.4",
     "tsx": "^4.19.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.6.0"
   }
 }
